// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Image /> should render placeholders if forced to 1`] = `
<Image
  alt={null}
  animating={true}
  backgroundColor="#f2f2f2"
  className=""
  classNameImg=""
  forcePlaceholder={true}
  highestResolutionLoaded={[Function]}
  lazy={true}
  onError={[Function]}
  onLoad={[Function]}
  ratio={null}
  resolutions={
    Array [
      Object {
        "height": 440,
        "width": 440,
      },
    ]
  }
  src="foo/bar"
  unwrapped={false}
>
  <div
    className="css-vfdozt"
  />
</Image>
`;

exports[`<Image /> should render placeholders if src is null 1`] = `
<Image
  alt={null}
  animating={true}
  backgroundColor="#f2f2f2"
  className=""
  classNameImg=""
  forcePlaceholder={false}
  highestResolutionLoaded={[Function]}
  lazy={true}
  onError={[Function]}
  onLoad={[Function]}
  ratio={null}
  resolutions={
    Array [
      Object {
        "height": 440,
        "width": 440,
      },
    ]
  }
  src="foo/bar"
  unwrapped={false}
>
  <div
    className="css-vfdozt"
  >
    <ForwardRef
      alt={null}
      className="css-1q1xq2l"
      lazy={true}
      onError={[Function]}
      onLoad={[Function]}
      src="foo/bar"
    >
      <img
        alt={null}
        aria-label={null}
        className="css-1q1xq2l css-f45h63 common__image"
        data-test-id="image"
        loading="lazy"
        onError={[Function]}
        onLoad={[Function]}
        role="presentation"
        src="foo/bar"
      />
    </ForwardRef>
  </div>
</Image>
`;
